1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I for libobjc.

1999-03-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ObjectSaver.[hm], simtools.h ([ObjectSaver
	+save:to:withTemplate:]): Make template probemap conform to
	ProbeMap protocol.
	([ObjectSaver +save:toFileNamed:withTemplate:]): Likewise.
	([ObjectSaver -setTemplateProbeMap:]): Likewise.

	* ObjectLoader.m ([ObjectLoader -setTemplateProbeMap:]),
	simtools.h: Likewise.

	* ObjectSaver.h (ObjectSaver): Declare templateProbeMap as conforming
	to ProbeMap protocol.

	* ObjectLoader.h (ObjectLoader): Declare probeMapCache as conforming
	to ProbeMap protocol.

1999-02-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtools.h: Add CREATABLE tags to all non-abstract protocols.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, REVISION, AGE): No changes.  Version 1.4.1.

1999-02-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtools.h (InFile): Add a warning about error return behavior.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CURRENT): Bump.

1999-01-14  Alex Lancaster  <alex@santafe.edu>

	* simtools.[hm] (initSwarmApp, initSwarmAppOptions): Remove
	batchMode arguments.
	(initSwarmAppBatch, initSwarmAppOptionsBatch): Add new functions,
	have the effect of setting the batchMode internally.

1999-01-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* simtools.[hm] (initSwarmBatch): New function.
	(initSwarmApp, initSwarmAppOptions): Add batchMode argument.

1999-01-10  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* simtools.m (init): Don't setup any error or warning types.

	* UName.m ([UName -createEnd]): Use InvalidArgument instead of
	UNameError.
	
	* UName.[hm]: Remove UNameError.

	* NSelect.m ([NSelect +select:from:into:]): Use InvalidArgument
	instead of creating NSelectTooMany.

	* NSelect.[hm]: Remove NSelectTooMany.

	* AppendFile.m ([AppendFile +create:withName:]): Don't