@@ -6,9 +6,10 @@
 // NSelect -> select exactly N elements from a collection 
 // without repetition! The target collection must be provided.
 
+#import <simtools.h> // NSelect
 #import <objectbase/SwarmObject.h>
 
-@interface NSelect: SwarmObject
+@interface NSelect: SwarmObject <NSelect>
 {
 }
 
